--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
-          fetch-depth: 1
+          fetch-depth: 0
 
       - name: Configure git identity
         shell: bash
@@ -38,7 +38,58 @@ jobs:
           git config --global user.name  "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
+      # Figure out whether assets/ and/or public api/ changed in THIS push
+      - name: Detect changed paths
+        id: changes
+        shell: bash
+        run: |
+          set -euo pipefail
+
+          BEFORE="${{ github.event.before }}"
+          AFTER="${{ github.sha }}"
+
+          # workflow_dispatch doesn't always have a usable "before"
+          if [ -z "${BEFORE}" ] || [ "${BEFORE}" = "0000000000000000000000000000000000000000" ]; then
+            # Best-effort: compare against previous commit if available
+            if git rev-parse "${AFTER}~1" >/dev/null 2>&1; then
+              BEFORE="$(git rev-parse "${AFTER}~1")"
+            else
+              BEFORE="${AFTER}"
+            fi
+          fi
+
+          echo "Diff range: $BEFORE..$AFTER"
+
+          CHANGED="$(git diff --name-only "$BEFORE" "$AFTER" || true)"
+          echo "$CHANGED" | sed 's/^/ - /' || true
+
+          assets_changed=false
+          api_changed=false
+
+          if echo "$CHANGED" | grep -qE '^assets/'; then
+            assets_changed=true
+          fi
+
+          # PUBLIC_API_DIR is literally "public api" (space),
+          # so paths will be like "public api/whatever.json"
+          if echo "$CHANGED" | grep -qE '^public api/'; then
+            api_changed=true
+          fi
+
+          echo "assets_changed=$assets_changed"
+          echo "api_changed=$api_changed"
+
+          echo "assets_changed=$assets_changed" >> "$GITHUB_OUTPUT"
+          echo "api_changed=$api_changed" >> "$GITHUB_OUTPUT"
+
+      - name: Skip (no assets/api changes)
+        if: steps.changes.outputs.assets_changed != 'true' && steps.changes.outputs.api_changed != 'true'
+        shell: bash
+        run: |
+          echo "No changes under '${ASSETS_DIR}/' or '${PUBLIC_API_DIR}/' — nothing to sync."
+
       - name: Validate GitHub App inputs (fail fast)
+        if: steps.changes.outputs.assets_changed == 'true' || steps.changes.outputs.api_changed == 'true'
         shell: bash
         env:
           GH_APP_ID: ${{ vars.GH_APP_ID }}
@@ -47,17 +98,15 @@ jobs:
           set -euo pipefail
 
           if [ -z "${GH_APP_ID:-}" ]; then
-            echo "ERROR: vars.GH_APP_ID is not set (should be your GitHub App ID, e.g. 2709663)."
+            echo "ERROR: vars.GH_APP_ID is not set (your GitHub App ID)."
             exit 1
           fi
 
-          # Don't print key; just check it's non-empty
           if [ -z "${GH_APP_PRIVATE_KEY:-}" ]; then
-            echo "ERROR: secrets.GH_APP_PRIVATE_KEY is not set (paste the GitHub App private key PEM)."
+            echo "ERROR: secrets.GH_APP_PRIVATE_KEY is not set (GitHub App private key PEM)."
             exit 1
           fi
 
-          # Optional: ensure GH_APP_ID is numeric
           if ! [[ "${GH_APP_ID}" =~ ^[0-9]+$ ]]; then
             echo "ERROR: vars.GH_APP_ID must be numeric. Got: '${GH_APP_ID}'"
             exit 1
@@ -66,107 +115,124 @@ jobs:
           echo "App inputs look present."
 
       - name: Create GitHub App token
+        if: steps.changes.outputs.assets_changed == 'true' || steps.changes.outputs.api_changed == 'true'
         id: app-token
         uses: actions/create-github-app-token@v2
         with:
           app-id: ${{ vars.GH_APP_ID }}
           private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
           owner: Unlim8ted-Studio-Productions
-          # Optional: scope it tighter (recommended). Uncomment:
-          # repositories: |
-          #   assets.unlim8ted.com
-          #   api.unlim8ted.com
+          # Tight scope is better (recommended):
+          repositories: |
+            assets.unlim8ted.com
+            api.unlim8ted.com
 
-      - name: Fail if any file > 95MB in assets or public api
+      - name: Fail if any file > 95MB in assets or public api (only when needed)
+        if: steps.changes.outputs.assets_changed == 'true' || steps.changes.outputs.api_changed == 'true'
         shell: bash
         run: |
           set -euo pipefail
           THRESHOLD_BYTES=$((95 * 1024 * 1024))
           echo "Checking for files over $THRESHOLD_BYTES bytes..."
-          for DIR in "${ASSETS_DIR}" "${PUBLIC_API_DIR}"; do
+
+          check_dir () {
+            local DIR="$1"
             if [ -d "$DIR" ]; then
               BIG="$(find "$DIR" -type f -printf '%s %p\n' | awk -v t="$THRESHOLD_BYTES" '$1>t{print}')"
               if [ -n "$BIG" ]; then
-                echo "ERROR: Found files too large for a normal git push:"
+                echo "ERROR: Found files too large for a normal git push in '$DIR':"
                 echo "$BIG"
                 exit 1
               fi
             fi
-          done
+          }
 
-      - name: Sync assets + public api into their repos
+          if [ "${{ steps.changes.outputs.assets_changed }}" = "true" ]; then
+            check_dir "${ASSETS_DIR}"
+          fi
+          if [ "${{ steps.changes.outputs.api_changed }}" = "true" ]; then
+            check_dir "${PUBLIC_API_DIR}"
+          fi
+
+      - name: Sync assets repo (only if assets changed)
+        if: steps.changes.outputs.assets_changed == 'true'
         shell: bash
         env:
           GH_APP_TOKEN: ${{ steps.app-token.outputs.token }}
-          ASSETS_REPO: ${{ env.ASSETS_REPO }}
-          API_REPO: ${{ env.API_REPO }}
+          REPO: ${{ env.ASSETS_REPO }}
           BRANCH: ${{ env.TARGET_BRANCH }}
-          ASSETS_DIR: ${{ env.ASSETS_DIR }}
-          PUBLIC_API_DIR: ${{ env.PUBLIC_API_DIR }}
+          SRC_DIR: ${{ env.ASSETS_DIR }}
         run: |
           set -euo pipefail
           export GIT_TERMINAL_PROMPT=0
 
-          sync_dir_to_repo () {
-            local SRC_DIR="$1"
-            local REPO="$2"
-            local LABEL="$3"
+          SRC_PATH="${GITHUB_WORKSPACE}/${SRC_DIR}"
+          if [ ! -d "${SRC_PATH}" ]; then
+            echo "Source folder not found: ${SRC_PATH}" >&2
+            exit 1
+          fi
 
-            local SRC_PATH="${GITHUB_WORKSPACE}/${SRC_DIR}"
-            if [ ! -d "${SRC_PATH}" ]; then
-              echo "Source folder not found: ${SRC_PATH}" >&2
-              ls -la "${GITHUB_WORKSPACE}"
-              exit 1
-            fi
+          WORKDIR="$(mktemp -d)"
+          echo "Workdir (assets): $WORKDIR"
+          PUSH_URL="https://x-access-token:${GH_APP_TOKEN}@github.com/${REPO}.git"
 
-            local WORKDIR
-            WORKDIR="$(mktemp -d)"
-            echo "Workdir (${LABEL}): $WORKDIR"
-            trap "rm -rf \"$WORKDIR\"" RETURN
+          git clone --branch "${BRANCH}" --depth 1 "${PUSH_URL}" "${WORKDIR}/repo"
+          test -d "${WORKDIR}/repo/.git"
 
-            local PUSH_URL="https://x-access-token:${GH_APP_TOKEN}@github.com/${REPO}.git"
+          # Mirror content into repo root (but keep .git and the target repo's workflows if you want)
+          rsync -a --delete \
+            --exclude='.git/' \
+            --exclude='.github/' \
+            "${SRC_PATH}/" "${WORKDIR}/repo/"
 
-            git clone --branch "${BRANCH}" --depth 1 "${PUSH_URL}" "${WORKDIR}/repo"
+          git -C "${WORKDIR}/repo" add -A
+          if git -C "${WORKDIR}/repo" diff --cached --quiet; then
+            echo "No changes to push to ${REPO}."
+            rm -rf "$WORKDIR"
+            exit 0
+          fi
 
-            if [ ! -d "${WORKDIR}/repo/.git" ]; then
-              echo "ERROR: Clone did not produce a git repo at ${WORKDIR}/repo" >&2
-              ls -la "${WORKDIR}/repo" || true
-              exit 1
-            fi
+          git -C "${WORKDIR}/repo" commit -m "Deploy assets from unlim8ted.com (${GITHUB_SHA})"
+          git -C "${WORKDIR}/repo" push "${PUSH_URL}" "HEAD:${BRANCH}"
+          rm -rf "$WORKDIR"
 
-            git -C "${WORKDIR}/repo" fetch origin "${BRANCH}"
-            git -C "${WORKDIR}/repo" checkout "${BRANCH}"
-            git -C "${WORKDIR}/repo" reset --hard "origin/${BRANCH}"
-            git -C "${WORKDIR}/repo" clean -fdx
+      - name: Sync public api repo (only if public api changed)
+        if: steps.changes.outputs.api_changed == 'true'
+        shell: bash
+        env:
+          GH_APP_TOKEN: ${{ steps.app-token.outputs.token }}
+          REPO: ${{ env.API_REPO }}
+          BRANCH: ${{ env.TARGET_BRANCH }}
+          SRC_DIR: ${{ env.PUBLIC_API_DIR }}
+        run: |
+          set -euo pipefail
+          export GIT_TERMINAL_PROMPT=0
 
-            # IMPORTANT: do not delete .git; also protect .github unless you intentionally mirror it
-            rsync -a --delete \
-              --exclude='.git/' \
-              --exclude='.github/' \
-              "${SRC_PATH}/" "${WORKDIR}/repo/"
+          SRC_PATH="${GITHUB_WORKSPACE}/${SRC_DIR}"
+          if [ ! -d "${SRC_PATH}" ]; then
+            echo "Source folder not found: ${SRC_PATH}" >&2
+            exit 1
+          fi
 
-            git -C "${WORKDIR}/repo" add -A
+          WORKDIR="$(mktemp -d)"
+          echo "Workdir (public api): $WORKDIR"
+          PUSH_URL="https://x-access-token:${GH_APP_TOKEN}@github.com/${REPO}.git"
 
-            if git -C "${WORKDIR}/repo" diff --cached --quiet; then
-              echo "No changes to push to ${REPO}."
-              return 0
-            fi
+          git clone --branch "${BRANCH}" --depth 1 "${PUSH_URL}" "${WORKDIR}/repo"
+          test -d "${WORKDIR}/repo/.git"
 
-            git -C "${WORKDIR}/repo" commit -m "Deploy ${LABEL} from unlim8ted.com (${GITHUB_SHA})"
+          rsync -a --delete \
+            --exclude='.git/' \
+            --exclude='.github/' \
+            "${SRC_PATH}/" "${WORKDIR}/repo/"
 
-            for i in 1 2 3; do
-              echo "Attempt $i: pushing ${REPO}@${BRANCH}..."
-              if git -C "${WORKDIR}/repo" push "${PUSH_URL}" "HEAD:${BRANCH}"; then
-                echo "Pushed successfully."
-                return 0
-              fi
-              echo "Push failed; retrying..."
-              sleep 5
-            done
+          git -C "${WORKDIR}/repo" add -A
+          if git -C "${WORKDIR}/repo" diff --cached --quiet; then
+            echo "No changes to push to ${REPO}."
+            rm -rf "$WORKDIR"
+            exit 0
+          fi
 
-            echo "Failed to push to ${REPO} after retries." >&2
-            return 1
-          }
-
-          sync_dir_to_repo "${ASSETS_DIR}"     "${ASSETS_REPO}" "assets"
-          sync_dir_to_repo "${PUBLIC_API_DIR}" "${API_REPO}"    "public api"
+          git -C "${WORKDIR}/repo" commit -m "Deploy public api from unlim8ted.com (${GITHUB_SHA})"
+          git -C "${WORKDIR}/repo" push "${PUSH_URL}" "HEAD:${BRANCH}"
+          rm -rf "$WORKDIR"
